# qtrade

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
config/: config.toml  config.toml.example
docs/: DAILY_KLINE_CACHE.md  MCP_SERVER.md  OPEND_GUIDE.md  PLAN.md  TRADING_EXECUTOR.md  US_MARKET_SESSIONS.md
docs/roadmap/: ms-macd.md  watchlist-sync.md
scripts/: check_ax.sh  test-mcp.py
src/: config.rs  main.rs  models.rs
src/alerts/: manager.rs  mod.rs  notify.rs  rules.rs
src/analysis/: daily.rs  engine.rs  indicators.rs  mod.rs  signals.rs
src/data/: parser.rs  provider.rs
src/futu/: accessibility.rs  ax_action.rs  mod.rs  ocr.rs  openapi.rs  watchlist.rs
src/futu/ax/: action.rs  app.rs  element.rs  error.rs  ffi.rs  mod.rs  tests.rs  types.rs
src/mcp/: server.rs
src/trading/: executor.rs  mod.rs  paper.rs
src/ui/: dashboard.rs
