[package]
name = "qtrade"
version = "0.1.0"
edition = "2021"
description = "量化交易盯盘系统 - 智能行情监控与分析"

[dependencies]
# macOS 系统 API（Accessibility 方案）
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes", "CFArray", "CFDictionary"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGWindow", "CGGeometry", "CGColorSpace"] }
objc2-vision = { version = "0.3", features = ["VNRecognizeTextRequest", "VNRequestHandler", "VNObservation", "VNRequest", "VNTypes"] }
core-foundation = "0.10"
core-graphics = "0.24"
foreign-types = "0.5"

# FutuOpenD OpenAPI 方案
prost = "0.13"
prost-types = "0.13"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = "1"

# 数据与配置
plist = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 终端 UI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# 通知
reqwest = { version = "0.12", features = ["json"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP Server
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
schemars = "1.0"

# 工具
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
sha1 = "0.10"
serde_json = "1"

[build-dependencies]
prost-build = "0.13"
